# rORForise

./: Myco_joined_readmode.gff  README.md  check_pred.py  count_Read_Per_Gene.py  evaluate.py  examples_checking.py  filter_read_type.py  gen_test_data.py  pyproject.toml  setup.cfg  small.bed  small.gff
Evaluation/: Alignment_Based_Evaluation.py  Alignment_Based_Evaluation_V2.py  Eggnog_Comparison_V2.py  Gene_Mapping.py  Unmapped_Reads_V2.py  Unmapped_Reads_V3.py  eggnog_comparison.py  unmapped_reads.py
Genome_Processing/: Gene_Coverage.py  bam_gff_intersect.py  genome_split.py  output_annotations.bed  output_chunks.fasta  processing.txt  utils.py
Genome_Processing/Escherichia_coli_k_12/: E-coli.gff
Genome_Processing/Mycoplasma/: Myco_pep.dmnd
Genome_Processing/Staph/: Staph_pep.fa
Predictors/: Myco_NaiveV3.gff  Myco_NaiveV3_DIAMOND_80  Myco_Naive_Duo_DIAMOND_80  Mycoplasma_Naive.fa  Mycoplasma_Naive.gff  Mycoplasma_Naive_2nd_Longest.fa  Mycoplasma_Naive_2nd_Longest_DIAMOND  Mycoplasma_Naive_DIAMOND  Mycoplasma_Naive_Random.fa  Mycoplasma_Naive_Random_DIAMOND  Naive-StORF-V1.py  Naive-StORF-V2.py  Naive-StORF-V3.py  Naive_Stop_Predictor.py  Naive_Stop_Predictor_Duo.py  Naive_Stop_Predictor_V3.py  rStORF.py
aux/: Read_Blast_Coverage.py
docs/: rORForise_module_descriptions.md
scripts/: adapters.py  count_Read_Per_Gene.py  gene_coverage.py
testing_data/: .~lock.testing_data_validation.csv#  testing_data_intersect.bed  testing_data_predictions.gff  testing_data_validation.csv
tests/: test_check_pred_vectors.py  test_generator_and_check_pred.py
(+168 files in other folders)
